add_subdirectory(libevents)
if (ANDROID)
    include(OpenSSL/android_openssl/android_openssl.cmake)
    add_subdirectory(qtandroidserialport)
endif()
set(BUILD_SHARED_LIBS OFF CACHE BOOL "Force qmdnsengine to build as static" FORCE)
add_subdirectory(shapelib)
if (WIN32)
    add_subdirectory(sdl2)
    add_subdirectory(zlib)
endif (WIN32)
if (GST_FOUND)
    message(STATUS "Building qmlglsink" )
    add_subdirectory(qmlglsink)
endif()

add_subdirectory(qmdnsengine)