add_subdirectory(libevents)

if(ANDROID)
    include(${CMAKE_CURRENT_SOURCE_DIR}/OpenSSL/android_openssl/android_openssl.cmake)
    add_subdirectory(qtandroidserialport)
elseif(WIN32)
    add_subdirectory(sdl2)
    add_subdirectory(zlib)
endif()

option(QGC_ENABLE_VIDEOSTREAMING "Enable video streaming" ON)
if(QGC_ENABLE_VIDEOSTREAMING)
    message(STATUS "Enabling video streaming support")
    add_subdirectory(qmlglsink)
else()
    message(STATUS "Video streaming disabled")
endif()

set(BUILD_SHARED_LIBS OFF CACHE BOOL "Force qmdnsengine & shapelib to build as static" FORCE)
add_subdirectory(shapelib)

option(QGC_QT6_DISABLE_DNSENGINE "Disable DNS Engine" OFF)
if(QGC_QT6_DISABLE_DNSENGINE)
    message(STATUS "DNS Engine disabled")
    add_compile_definitions(QT6_DISABLE_DNSENGINE=ON)
else()
    add_subdirectory(qmdnsengine)
endif()
