[project]
name = "qgc-tools"
version = "0.0.0"
requires-python = ">=3.10"

[project.optional-dependencies]
scripts = [
  "defusedxml>=0.7.1",
  "httpx>=0.28",
  "jinja2>=3.1",
  "tomli>=2.0; python_version < '3.11'",
]
precommit = [
  "pre-commit",
]
test = [
  "pytest",
  "jinja2",
  "pyyaml",
  "tomli>=2.0; python_version < '3.11'",
]
ci = [
  "pre-commit",
  "meson",
  "ninja",
]
qt = [
  "aqtinstall",
]
coverage = [
  "gcovr",
]
dev = [
  "jinja2",
  "pyyaml",
  "pymavlink",
  "rust-just>=1.55.1",
  "tomli>=2.0; python_version < '3.11'",
]
lint = [
  "import-linter>=2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.importlinter]
root_packages = ["common", "analyzers", "generators"]

[[tool.importlinter.contracts]]
name = "common is a dependency-free foundation"
type = "forbidden"
source_modules = ["common"]
forbidden_modules = ["analyzers", "generators"]

[[tool.importlinter.contracts]]
name = "tool packages are mutually independent"
type = "independence"
modules = ["analyzers", "generators"]
